<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="18dp"
    android:id="@+id/horizontal_card"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/neutral100"
    app:cardElevation="0dp"
    android:background="@drawable/custom_card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:contentDescription="@string/content_desc"
            android:scaleType="centerCrop"
            android:background="@drawable/cust_thumbnail_horizontal_card"
            android:clipToOutline="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_label_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/owner_label"
            android:textColor="@color/neutral500"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/title_event"
            app:layout_constraintTop_toBottomOf="@+id/title_event" />

        <TextView
            android:id="@+id/tv_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/placeholder_owner"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="1"
            android:textColor="@color/neutral500"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/tv_label_owner"
            app:layout_constraintStart_toEndOf="@+id/tv_label_owner"
            app:layout_constraintTop_toTopOf="@+id/tv_label_owner" />

        <TextView
            android:id="@+id/title_event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/placeholder_title_event_card"
            android:textColor="@color/neutral700"
            android:maxLines="3"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/icon_date"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/icon_tanggal"
            android:src="@drawable/ic_calendar"
            app:layout_constraintStart_toStartOf="@+id/tv_label_owner"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_owner" />

        <TextView
            android:id="@+id/date_event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/neutral500"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/icon_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/icon_date"
            app:layout_constraintTop_toTopOf="@+id/icon_date" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>